test/2/type/sub-sig-field.err
type error: test/2/type/sub-sig-field.ploy:2:12-32: type annotation actual struct has 2 fields; expected 0. signature domain -> actual type: (Int Int)
  f:()%Int = fn (Int Int)%Int 0@$;
             ~~~~~~~~~~~~~~~~~~~~~
note: test/2/type/sub-sig-field.ploy:2:3-8: signature domain -> expected type: ()
  f:()%Int = fn (Int Int)%Int 0@$;
    ~~~~~~
