test/2/type/sub-sig-field.ploy
f:()%Int = fn (Int Int)%Int 0@$;

main = exit.f(i=0 j=0)
